example/error/syntaxerr.m
# LINECOMMENT
"""
  tests
  12334
""
int i = 0